[gd_scene load_steps=8 format=2]

[ext_resource path="res://demos/bomber/head/monkey_head.tscn" type="PackedScene" id=1]
[ext_resource path="res://demos/bomber/menu/player_marker.gd" type="Script" id=2]
[ext_resource path="res://addons/PWK/RedHatDisplay-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://demos/bomber/menu/state_marker.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="PlayerMarker" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 24
script = ExtResource( 2 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_right = 1024.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeadSprite" parent="AspectRatioContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.5
margin_top = 0.0
margin_right = 763.5
margin_bottom = 503.0

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_top = 527.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 8
custom_constants/separation = 32
alignment = 1

[node name="StateMarker" type="PanelContainer" parent="HBoxContainer"]
margin_left = 464.0
margin_right = 559.0
margin_bottom = 41.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="HBoxContainer/StateMarker"]
margin_right = 95.0
margin_bottom = 41.0
custom_constants/margin_right = 12
custom_constants/margin_top = 8
custom_constants/margin_left = 12
custom_constants/margin_bottom = 8

[node name="Text" type="Label" parent="HBoxContainer/StateMarker/Margin"]
margin_left = 12.0
margin_top = 8.0
margin_right = 83.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Sleeping"

[node name="Tween" type="Tween" parent="HBoxContainer/StateMarker"]

[node name="Info" type="Control" parent="HBoxContainer"]
margin_top = 73.0
margin_right = 1024.0
margin_bottom = 73.0
size_flags_horizontal = 7

[node name="JoinLabel" type="Label" parent="HBoxContainer/Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = -11.0
margin_right = 50.5
margin_bottom = 11.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
custom_fonts/font = SubResource( 3 )
text = "Press A to join"
align = 1
valign = 1

[node name="holdLabel" type="Label" parent="HBoxContainer/Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.5
margin_top = -11.0
margin_right = 115.5
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 0.588235 )
custom_fonts/font = SubResource( 3 )
text = "Hold A when ready or B to leave"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
